[gd_scene load_steps=38 format=3 uid="uid://nagtfvus54ti"]

[ext_resource type="Script" path="res://Scripts/TitleAnimation.gd" id="1_q2fv6"]
[ext_resource type="Script" path="res://Scripts/GameControl.gd" id="2_ftny7"]
[ext_resource type="Texture2D" uid="uid://cwkobk5tynwb" path="res://Sprites/joystickUp.png" id="2_ote2u"]
[ext_resource type="Script" path="res://Scripts/AudioManager.gd" id="2_pvqkf"]
[ext_resource type="Texture2D" uid="uid://b7e34ys1ay5io" path="res://Sprites/circleBlack.png" id="3_acpn5"]
[ext_resource type="Texture2D" uid="uid://bs785ibbskyyx" path="res://Sprites/exit.png" id="3_my0yo"]
[ext_resource type="Texture2D" uid="uid://brhn7a3h4ymrk" path="res://Sprites/joystickLeft.png" id="4_fgqic"]
[ext_resource type="Texture2D" uid="uid://c5jhysdhfch57" path="res://Sprites/circleOutBlack.png" id="4_u4dio"]
[ext_resource type="AudioStream" uid="uid://3jmatshduro6" path="res://Sfx/ding.wav" id="4_ueynl"]
[ext_resource type="Texture2D" uid="uid://bctdkr6d6inou" path="res://Sprites/joystickRight.png" id="5_p1dhn"]
[ext_resource type="Texture2D" uid="uid://b5wnt5eknny3b" path="res://Sprites/circleWhite.png" id="5_v3sfo"]
[ext_resource type="AudioStream" uid="uid://ccx0u1fy20o6x" path="res://Sfx/puaj.wav" id="6_thbe2"]
[ext_resource type="Texture2D" uid="uid://ckgb6f8k22i4b" path="res://Sprites/exitRight.png" id="6_w3k7p"]
[ext_resource type="AudioStream" uid="uid://c3pinge1vp07a" path="res://Sfx/bum.wav" id="9_a21ml"]
[ext_resource type="Texture2D" uid="uid://cu0ggo3hca4is" path="res://Sprites/audioOn.png" id="13_3tbn8"]

[sub_resource type="SystemFont" id="SystemFont_qmuca"]
font_names = PackedStringArray("Palatino Linotype")

[sub_resource type="LabelSettings" id="LabelSettings_lw34a"]
font = SubResource("SystemFont_qmuca")
font_size = 92
outline_size = 12
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_tl3vo"]
font = SubResource("SystemFont_qmuca")
font_size = 64
font_color = Color(0, 0, 0, 1)
outline_size = 12

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_bahg6"]
random_pitch = 1.15
streams_count = 1
stream_0/stream = ExtResource("6_thbe2")
stream_0/weight = 1.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_alnf4"]
random_pitch = 1.15
streams_count = 1
stream_0/stream = ExtResource("9_a21ml")
stream_0/weight = 1.0

[sub_resource type="LabelSettings" id="LabelSettings_130k6"]
font = SubResource("SystemFont_qmuca")
font_size = 148
outline_size = 8
outline_color = Color(0, 0, 0, 1)
shadow_size = 32
shadow_color = Color(0, 1, 2.91133e-11, 0.501961)
shadow_offset = Vector2(0, 0)

[sub_resource type="LabelSettings" id="LabelSettings_1xoy7"]
font = SubResource("SystemFont_qmuca")
font_size = 24
font_color = Color(0, 0, 0, 1)
outline_size = 8

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_6vfjs"]
size = Vector2(64, 64)

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_0og3t"]
animation = &"MainMenu/ExitButton"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_77cnu"]
animation = &"MainMenu/PlayButton"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_jj4he"]
animation = &"RESET"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_rhis2"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_41sfu"]
advance_mode = 2
advance_condition = &"playHovered"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_g2i7e"]
advance_mode = 2
advance_condition = &"exitHovered"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_w13my"]
advance_mode = 2
advance_condition = &"playUnhovered"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ybvs4"]
advance_mode = 2
advance_condition = &"exitUnhovered"

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_xao1h"]
states/MainMenu_ExitButton/node = SubResource("AnimationNodeAnimation_0og3t")
states/MainMenu_ExitButton/position = Vector2(638, 42)
states/MainMenu_PlayButton/node = SubResource("AnimationNodeAnimation_77cnu")
states/MainMenu_PlayButton/position = Vector2(332, 205)
states/RESET/node = SubResource("AnimationNodeAnimation_jj4he")
states/RESET/position = Vector2(332, 42)
states/Start/position = Vector2(158, 105)
transitions = ["Start", "RESET", SubResource("AnimationNodeStateMachineTransition_rhis2"), "RESET", "MainMenu_PlayButton", SubResource("AnimationNodeStateMachineTransition_41sfu"), "RESET", "MainMenu_ExitButton", SubResource("AnimationNodeStateMachineTransition_g2i7e"), "MainMenu_PlayButton", "RESET", SubResource("AnimationNodeStateMachineTransition_w13my"), "MainMenu_ExitButton", "RESET", SubResource("AnimationNodeStateMachineTransition_ybvs4")]
graph_offset = Vector2(-333, -25)

[sub_resource type="Animation" id="Animation_en441"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Play:icon")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_ote2u")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Exit:icon")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_my0yo")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yom7h"]
_data = {
"RESET": SubResource("Animation_en441")
}

[sub_resource type="Animation" id="Animation_ai15u"]
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Exit:icon")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [ExtResource("6_w3k7p"), ExtResource("3_my0yo"), ExtResource("6_w3k7p")]
}

[sub_resource type="Animation" id="Animation_km7al"]
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Play:icon")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [ExtResource("4_fgqic"), ExtResource("5_p1dhn"), ExtResource("4_fgqic")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7hdt2"]
_data = {
"ExitButton": SubResource("Animation_ai15u"),
"PlayButton": SubResource("Animation_km7al")
}

[node name="MenuGui" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_q2fv6")

[node name="AudioManager" type="Node" parent="."]
script = ExtResource("2_pvqkf")

[node name="SFXVolumeSlider" type="HSlider" parent="AudioManager"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 309.0
offset_top = 513.0
offset_right = -280.0
offset_bottom = -71.0
grow_horizontal = 2
grow_vertical = 2
max_value = 1.0
step = 0.001
value = 0.5

[node name="Sprite2D" type="Sprite2D" parent="AudioManager"]
position = Vector2(287, 521)
scale = Vector2(0.4, 0.4)
texture = ExtResource("13_3tbn8")

[node name="PlaySfxPlayer" type="AudioStreamPlayer" parent="AudioManager"]
stream = ExtResource("4_ueynl")
bus = &"SFX"

[node name="GameControl" type="Node" parent="."]
script = ExtResource("2_ftny7")

[node name="GameWindow" type="Window" parent="GameControl"]
size = Vector2i(200, 200)
visible = false
unresizable = true
borderless = true
always_on_top = true
transparent = true
extend_to_title = true

[node name="ColorRect" type="ColorRect" parent="GameControl/GameWindow"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="RemainingCircleTimer" type="TextureProgressBar" parent="GameControl/GameWindow"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 443.0
offset_bottom = 443.0
grow_horizontal = 2
grow_vertical = 2
max_value = 1.0
step = 0.01
value = 0.67
fill_mode = 4
texture_under = ExtResource("3_acpn5")
texture_over = ExtResource("4_u4dio")
texture_progress = ExtResource("5_v3sfo")

[node name="ScoreLabel" type="Label" parent="GameControl/GameWindow"]
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 10.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
text = "10"
label_settings = SubResource("LabelSettings_lw34a")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MainButton" type="Button" parent="GameControl/GameWindow"]
modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TimeLabel" type="Label" parent="GameControl"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 240.0
offset_top = 280.0
offset_right = -240.0
offset_bottom = -240.0
grow_horizontal = 2
grow_vertical = 2
text = "00:00:00"
label_settings = SubResource("LabelSettings_tl3vo")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ClickSfxPlayer" type="AudioStreamPlayer" parent="GameControl"]
stream = SubResource("AudioStreamRandomizer_bahg6")
volume_db = -1.0
bus = &"SFX"

[node name="MissSfxPlayer" type="AudioStreamPlayer" parent="GameControl"]
stream = SubResource("AudioStreamRandomizer_alnf4")
bus = &"SFX"

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 256.0
grow_horizontal = 2
text = "Screequare"
label_settings = SubResource("LabelSettings_130k6")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreSlider" type="HSlider" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 280.0
offset_top = 425.0
offset_right = -280.0
offset_bottom = -159.0
grow_horizontal = 2
grow_vertical = 2
max_value = 2.0
scrollable = false
tick_count = 3
ticks_on_borders = true

[node name="MaxScore10" type="Label" parent="ScoreSlider"]
layout_mode = 0
offset_left = -4.5
offset_top = 25.0
offset_right = 20.5
offset_bottom = 50.0
text = "10"
label_settings = SubResource("LabelSettings_1xoy7")

[node name="MaxScore25" type="Label" parent="ScoreSlider"]
layout_mode = 0
offset_left = 107.5
offset_top = 25.0
offset_right = 132.5
offset_bottom = 50.0
text = "25"
label_settings = SubResource("LabelSettings_1xoy7")

[node name="MaxScore50" type="Label" parent="ScoreSlider"]
layout_mode = 0
offset_left = 219.5
offset_top = 25.0
offset_right = 244.5
offset_bottom = 50.0
text = "50"
label_settings = SubResource("LabelSettings_1xoy7")

[node name="Play" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = 360.0
offset_right = -560.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 2
icon = ExtResource("2_ote2u")
icon_alignment = 1
expand_icon = true

[node name="Exit" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 560.0
offset_top = 360.0
offset_right = -40.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 2
icon = ExtResource("3_my0yo")
icon_alignment = 1
expand_icon = true

[node name="DebugGameButton" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 33.0
offset_top = 229.0
offset_right = 105.0
offset_bottom = 301.0
icon = SubResource("PlaceholderTexture2D_6vfjs")

[node name="TitleAnimTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_xao1h")
anim_player = NodePath("../TitleAnimPlayer")
parameters/conditions/exitHovered = false
parameters/conditions/exitUnhovered = false
parameters/conditions/playHovered = false
parameters/conditions/playUnhovered = false

[node name="TitleAnimPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_yom7h"),
"MainMenu": SubResource("AnimationLibrary_7hdt2")
}

[connection signal="value_changed" from="AudioManager/SFXVolumeSlider" to="AudioManager" method="_on_sfx_volume_slider_value_changed"]
[connection signal="pressed" from="GameControl/GameWindow/MainButton" to="GameControl" method="_main_button_press"]
[connection signal="value_changed" from="ScoreSlider" to="GameControl" method="_score_drag_changed"]
[connection signal="mouse_entered" from="Play" to="." method="_play_btn_hovered"]
[connection signal="mouse_exited" from="Play" to="." method="_play_btn_unhovered"]
[connection signal="pressed" from="Play" to="GameControl" method="_play_button_press"]
[connection signal="pressed" from="Play" to="AudioManager" method="_on_play_pressed"]
[connection signal="mouse_entered" from="Exit" to="." method="_exit_btn_hovered"]
[connection signal="mouse_exited" from="Exit" to="." method="_exit_btn_unhovered"]
[connection signal="pressed" from="Exit" to="GameControl" method="_exit_pressed"]
[connection signal="pressed" from="DebugGameButton" to="GameControl" method="_main_button_press"]
